components/demo-app-4g8g/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: my-application
    appstudio.openshift.io/component: demo-app-4g8g
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eldemo-app-4g8g
  namespace: karthik
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-demo-app-4g8g
    weight: null
status: {}
